--- a/src/pages/Dashboard/Users/User/superAdmin.module.css
+++ b/src/pages/Dashboard/Users/User/superAdmin.module.css
@@ -1,13 +1,42 @@
-.icon{
-    color: white;
+.icon {
+  color: white;
 }
 
-.details{
-    color: #fff;
-    text-decoration: none;
+.details {
+  color: #fff;
+  text-decoration: none;
 }
 
 .icon:hover,
-.details:hover{
-    color: rgb(107, 219, 101);
+.details:hover {
+  color: rgb(107, 219, 101);
+}
+.userImg {
+  width: 50px;
+  height: 50px;
+  border: 3px solid #fff;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.block_unblock {
+  /* background-color: #7e39ca; */
+}
+.block_unblock > Button {
+  background-color: #7e39ca;
+  display: flex;
+  align-items: center;
+  /* border: 1px solid red; */
+  margin: 0 auto;
+  font-size: 13px;
+  width: 105px;
+  text-transform: capitalize;
+}
+.block_unblock > Button:hover {
+  background-color: #7e39ca;
+  opacity: 0.9;
+}
+.mt_icon {
+  color: #ffffff;
+  font-size: 19px !important;
+  margin-left: 5px;
 }
