--- a/src/pages/Auth/Login/Login.module.css
+++ b/src/pages/Auth/Login/Login.module.css
@@ -56,6 +56,7 @@ span {
   display: flex;
   align-items: center;
   background-color: #3e3b5b;
+  justify-content: center;
   border-radius: 13px;
 }
 
@@ -67,6 +68,7 @@ span {
   background: transparent;
   color: #ffffff;
   border: none;
+  border-radius: 13px 0px 0px 13px;
 }
 /* .checkbox{
     display: flex;
@@ -150,7 +152,9 @@ span {
 }
 
 .passwordIcon {
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
+  margin: 0px 1rem;
+  /* border: 2px solid red; */
   cursor: pointer;
 }
 
