--- a/src/pages/Dashboard/Dashboard.module.css
+++ b/src/pages/Dashboard/Dashboard.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: #0e0a32;
+  /* background-color: #0e0a32; */
   min-height: 100vh;
   /* min-width: 100vw; */
   padding: 0.9rem;
@@ -28,7 +28,7 @@
 }
 @media screen and (max-width: 1024px) {
   .main_content {
-   overflow-x: scroll;
+    overflow-x: scroll;
   }
 }
 @media screen and (max-width: 950px) {
@@ -44,8 +44,8 @@
 }
 @media screen and (max-width: 480px) {
   .container {
-  gap: 0;
-  padding: 1.5rem;
+    gap: 0;
+    padding: 1.5rem;
   }
   .main_content {
     width: 100%;
