--- a/src/pages/Dashboard/Projects/Project/Project.module.css
+++ b/src/pages/Dashboard/Projects/Project/Project.module.css
@@ -4,8 +4,12 @@
 
 .container > h1 {
   margin: 0.685rem 0;
+  color: #7e39ca;
 }
-
+.container > div > h1 {
+  margin: 0.685rem 0;
+  color: #7e39ca;
+}
 .top {
   display: flex;
   /* border: 1px solid red; */
@@ -56,7 +60,7 @@
   cursor: pointer;
 }
 
-.topRight > select>option{
+.topRight > select > option {
   background-color: #7e39ca;
   color: #ffffff;
 }
@@ -188,6 +192,7 @@ tr td{
   margin-top: 10px;
   padding-top: 25px;
   border: 1px solid #818181;
+  background-color: #20114a;
 }
 .table__row td {
   padding-top: 30px;
@@ -196,6 +201,7 @@ tr td{
   border-collapse: collapse;
   /* margin-top: 20px; */
   font-weight: 300;
+  padding-bottom: 10px;
 }
 .gfg {
   border-collapse: separate;
@@ -238,27 +244,26 @@ tr td{
   background-color: #ffffff;
   color: #333;
 }
-@media screen and (max-width: 1023.80px){
+@media screen and (max-width: 1023.8px) {
   .table__header > th {
     font-size: 12px;
   }
   .project_dashboard_table {
     overflow-x: scroll;
-    }
-    .project_dashboard_table > table {
-     width: 780px;
-    }
+  }
+  .project_dashboard_table > table {
+    width: 780px;
+  }
   .table__row td {
     font-size: 12px;
   }
 }
-@media screen and (max-width: 767.80px){
+@media screen and (max-width: 767.8px) {
   .top > .topLeft > button,
-  .topRight > select  {
- font-size: 11px;
-
+  .topRight > select {
+    font-size: 11px;
   }
- /* {
+  /* {
     font-size: 11px;
     margin-right: 0;
   } */
@@ -269,17 +274,16 @@ tr td{
    width: 585px;
   } */
 }
-@media screen and (max-width: 612px){
+@media screen and (max-width: 612px) {
   .top > .topLeft,
-  .top > .topRight  {
+  .top > .topRight {
     width: 80%;
     margin: auto;
     justify-content: center;
-    gap: 40px
+    gap: 40px;
   }
   .top > .topLeft > button,
-  .topRight > select  {
+  .topRight > select {
     margin-right: 0;
-
   }
 }
